Updated Java version to 21. Updated gradle wrapper to version 8.11.1.