@@ -621,14 +621,14 @@ task gitMergeAll {
 
 task run(type: JavaExec) {
     dependsOn checkRuntime, allBuildTasks, cleanTempDir
-    workingDir = '.'; jvmArgs = ['-server', '-XX:-OmitStackTraceInFastThrow']
+    workingDir = '.'; jvmArgs = ['-server', '-XX:-OmitStackTraceInFastThrow', '--add-opens=java.base/java.lang=ALL-UNNAMED']
     systemProperties = ['moqui.conf':moquiConfDev, 'moqui.runtime':moquiRuntime]
     // NOTE: this is a hack, using -jar instead of a class name, and then the first argument is the name of the jar file
     main = '-jar'; args = [warName]
 }
 task runProduction(type: JavaExec) {
     dependsOn checkRuntime, allBuildTasks, cleanTempDir
-    workingDir = '.'; jvmArgs = ['-server', '-Xms1024M']
+    workingDir = '.'; jvmArgs = ['-server', '-Xms1024M', '--add-opens=java.base/java.lang=ALL-UNNAMED']
     systemProperties = ['moqui.conf':moquiConfProduction, 'moqui.runtime':moquiRuntime]
     main = '-jar'; args = [warName]
 }
@@ -637,25 +637,25 @@ task load(type: JavaExec) {
     description "Run Moqui to load data; to specify data types use something like: gradle load -Ptypes=seed,seed-initial,install"
     dependsOn checkRuntime, allBuildTasks
     systemProperties = ['moqui.conf':moquiConfDev, 'moqui.runtime':moquiRuntime]
-    workingDir = '.'; jvmArgs = ['-server']; main = '-jar'
+    workingDir = '.'; jvmArgs = ['-server', '--add-opens=java.base/java.lang=ALL-UNNAMED']; main = '-jar'
     args = [warName, 'load', (project.properties.containsKey('types') ? "types=${types}" : "types=all")]
 }
 task loadSeed(type: JavaExec) {
     dependsOn checkRuntime, allBuildTasks
     systemProperties = ['moqui.conf':moquiConfProduction, 'moqui.runtime':moquiRuntime]
-    workingDir = '.'; jvmArgs = ['-server']; main = '-jar'
+    workingDir = '.'; jvmArgs = ['-server', '--add-opens=java.base/java.lang=ALL-UNNAMED']; main = '-jar'
     args = [warName, 'load', (project.properties.containsKey('types') ? "types=${types}" : "types=seed")]
 }
 task loadSeedInitial(type: JavaExec) {
     dependsOn checkRuntime, allBuildTasks
     systemProperties = ['moqui.conf':moquiConfProduction, 'moqui.runtime':moquiRuntime]
-    workingDir = '.'; jvmArgs = ['-server']; main = '-jar'
+    workingDir = '.'; jvmArgs = ['-server', '--add-opens=java.base/java.lang=ALL-UNNAMED']; main = '-jar'
     args = [warName, 'load', (project.properties.containsKey('types') ? "types=${types}" : "types=seed,seed-initial")]
 }
 task loadProduction(type: JavaExec) {
     dependsOn checkRuntime, allBuildTasks
     systemProperties = ['moqui.conf':moquiConfProduction, 'moqui.runtime':moquiRuntime]
-    workingDir = '.'; jvmArgs = ['-server']; main = '-jar'
+    workingDir = '.'; jvmArgs = ['-server', '--add-opens=java.base/java.lang=ALL-UNNAMED']; main = '-jar'
     args = [warName, 'load', (project.properties.containsKey('types') ? "types=${types}" : "types=seed,seed-initial,install")]
 }
 
